1) Another schema registry fix, for SCE inside an ARF 2) Updated Bundle implementation to handle arbitrary href URLs